--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <div class="icon"><i class="bi bi-brightness-high"></i></div>
             <h4 class="title"><a href="">DS101X:</a></h4>
             <p class="description">Statistical Thinking for Data Science and Analytics (https://www.edx.org/) </p>
           </div>
