--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Shreyansh Jain</h1>
-      <p>I'm <span class="typed" data-typed-items="Learner, Developer, Problem solver, Rider"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Learner, Developer, Problem solver, Rider"></span></p>
     </div>
   </section><!-- End Hero -->
 
