--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Shreyansh Jain</h1>
-      <p>I'm a <span class="typed" data-typed-items="Learner, Developer, Problem solver, Rider"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Learner, Developer, Problem solver"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -309,9 +309,20 @@
           <h2>Projects</h2>
           <p>For my protfolio please check my github account</p><Br>
          <li> <a href="https://github.com/shreyansh2047151/gemstone"><i> Gemstone Project</i></a><br>
-          <p>This project was done in Java language where I have choosen this domain and done the assignments under this domain only.</p><br><br>
+          <p>• This project was done in Java language where I have chosen this domain and done the assignments under this domain only.<br>
+             • In this project I have tried to implement all the basic concepts of java and try to make it in an immaculate manner.</p><br><br>
           <li> <a href="https://github.com/shreyansh2047151/ngo"><i> NGO Project</i></a><br>
-          <p>This project was done in HTML, CSS and Javaxcript where I have clustered various NGO and given them a platform where they can get donations directly from also it has a third party payment gateway SBI YONO.</p><br>
+          <p>• This project was done in HTML, CSS and JavaScript where I have clustered various NGO and given them a platform where they can
+                 get donations directly from also it has a third party payment gateway SBI YONO.<br>
+             • This is a fully responsive website with mobile-friendly website.</p><br><br>
+            <li> <a href="https://github.com/shreyansh2047151/Ethereum-Historic-Data-Dashboard/tree/main"><i> Ethereum Historical Data, Power BI</i></a><br>
+              • This project was done in a data analytical tool Microsoft Power BI where I have used the historic data of Ethereum (a cryptocurrency)
+                and created a dashboard for it.<br>
+              • In this dashboard I have tried to analyze Ethereum trend from 2016 to 2021 with respect to it’s growing volume and it’s increasing of
+                 price through various charts and graphs.<br>
+              • This dashboard also consist of an insight section which include year wise percentage high/low return (keeping average price as base)
+                 and few facts about the ethereum coin.
+
         </div>
         </div>
 
