--- a/index.html
+++ b/index.html
@@ -446,42 +446,42 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">DS101X:</a></h4>
+            <h4 class="title">DS101X:</a></h4>
             <p class="description">Statistical Thinking for Data Science and Analytics (https://www.edx.org/) </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">eCARS2x:</a></h4>
+            <h4 class="title">eCARS2x:</a></h4>
             <p class="description">Electric Cars: Technology DelftX (https://www.edx.org/)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Renewable Energy Masterclass</a></h4>
+            <h4 class="title">Renewable Energy Masterclass</a></h4>
             <p class="description">Renewable Energy Masterclass – A Complete Guide to Renewable (www.udemy.com) </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Unix</a></h4>
+            <h4 class="title">Unix</a></h4>
             <p class="description">The Unix Workbench (www.coursera.org)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Java</a></h4>
+            <h4 class="title">Java</a></h4>
             <p class="description">Object Oriented Programming in Java (www.coursera.org)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Database</a></h4>
+            <h4 class="title">Database</a></h4>
             <p class="description">Database Management Essentials (www.coursera.org )</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Campus Ambassador</a></h4>
+            <h4 class="title">Campus Ambassador</a></h4>
             <p class="description">Campus Ambassador (MNIT Jaipur)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Google Digital</a></h4>
+            <h4 class="title">Google Digital</a></h4>
             <p class="description">Google Digital Unlock (Credential ID RGG PTQ UW2)</p>
           </div>
         </div>
